--- a/src/components/LeagueDetails/LeagueDetails.css
+++ b/src/components/LeagueDetails/LeagueDetails.css
@@ -1,8 +1,25 @@
-.header-logo img{
-    width:150px;
+.logo{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.logo img{
+    width: 140px;
+    height: 150px;
+}
+.header-container .logo{
+    position: absolute;
+    bottom: 0;
+    background: rgb(0, 0, 0); /* Fallback color */
+    background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+    color: #f1f1f1;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
 }
 .card-container{
-    height: 200px;
+    height: 250px;
     width: 70%;
     background-color: purple;
     border-radius:20px;
@@ -17,8 +34,8 @@
 .card-img img{
     float: right;
     width: 422px;
-    height: 180px;
-    margin: 10px;
+    height: 220px;
+    margin: 15px;
 }
 .description{
     width:70%;
